--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
     <div class="bodyContainer">
         <!-- icon-bar displayed in mobile view -->
+        <!-- added text for checking -->
         <div class="icon-bar">
             <button class="tablinks" onclick="opentab(event, 'Dashboard')">
                 <span class="material-icons">
